--- a/easy-game/package.json
+++ b/easy-game/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-preset-es2015": "^6.9.0",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-plugin-import": "^1.9.2",
     "gulp": "^3.9.1",
     "gulp-merge": "^0.1.1",
     "phaser": "^2.5.0",
@@ -18,6 +21,14 @@
     "script-loader": "^0.7.0",
     "webpack-dev-server": "^1.14.1"
   },
-  "dependencies": {
+  "dependencies": {},
+  "eslintConfig": {
+    "extends": "airbnb-base",
+    "rules": {
+      "padded-blocks": 0
+    },
+    "globals": {
+      "Phaser": true
+    }
   }
 }
