--- a/easy-game/package.json
+++ b/easy-game/package.json
@@ -10,15 +10,19 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "eslint": "^2.13.1",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.9.2",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-merge": "^0.1.1",
+    "gulp-util": "^3.0.7",
     "phaser": "^2.5.0",
     "phaser-shim": "^2.4.8",
     "script-loader": "^0.7.0",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {},
