--- a/easy-game/package.json
+++ b/easy-game/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.10.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
     "eslint": "^2.13.1",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.9.2",
@@ -28,9 +30,9 @@
   },
   "dependencies": {},
   "eslintConfig": {
+    "parser": "babel-eslint",
     "extends": "airbnb-base",
-    "rules": {
-    },
+    "rules": {},
     "globals": {
       "Phaser": true
     }
